tests/dataset/tpc-ds/compiler/go/q9.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq92013478444/001/main.go:365:2: syntax error: unexpected name TypeOf after top level declaration
